fixed spacing in directions sidebar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -26,3 +26,9 @@ background-image: linear-gradient(180deg, #000000 25%, #003400 71%, #02ff0e 100%
 
 }
 
+h3{
+  font-size: 1.125rem/* 18px */;
+    line-height: 1.75rem/* 28px */;
+    font-weight: bold;
+}
+
